--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@npmcli/package-json": "^6.1.0",
     "chart.js": "^4.4.7",
+    "glob": "^11.0.0",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "lru-cache": "^11.0.2",
+    "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
